log
Fri 10 Mar 2023 06:21:55 PM UTC: 
 tests:  0|7
total_score: 0/70
5f6ab1a
Tue 14 Mar 2023 10:09:33 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
98a4373
Tue 14 Mar 2023 11:16:08 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
a8d8412
Tue 14 Mar 2023 11:20:15 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:59:11: error: ‘p’ is a pointer; did you mean to use ‘->’?
   59 |   strcpy(p.nombre, nombre);
      |           ^
      |           ->
exercises.c:60:11: error: ‘p’ is a pointer; did you mean to use ‘->’?
   60 |   strcpy(p.rut, rut);
      |           ^
      |           ->
exercises.c:61:4: error: ‘p’ is a pointer; did you mean to use ‘->’?
   61 |   p.edad = edad;
      |    ^
      |    ->
Compilation failed
941f04c
